--- a/task-player-navigation/style.css
+++ b/task-player-navigation/style.css
@@ -1,6 +1,7 @@
 div#player {
-  width: 10px;
-  height: 10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 25%;
   background: red;
   
   transition: all 0.3s ease-out 0s;
@@ -16,4 +17,17 @@ div#player {
   background: grey;
   border: 5px solid black;
   box-sizing: border-box;
+}
+
+.bullet {
+    width: 4px;
+  height: 4px;
+  background: blue;
+  border-radius: 50%;
+  
+  transition: all 0.3s ease-out 0s;
+  
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
