--- a/task-player-navigation/style.css
+++ b/task-player-navigation/style.css
@@ -1,3 +1,11 @@
+.wrapper {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: space-between;
+  background: yellow;
+}
+
 div#player {
   width: 20px;
   height: 20px;
@@ -25,4 +33,23 @@ div#player {
   position: absolute;
   top: 0px;
   left: 0px;
+}
+
+#targetArea {
+  width: 400px;
+  height: 500px;
+  background: grey;
+  border: 5px solid red;
+  box-sizing: border-box;
+}
+
+.target {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: pink;
+  position: absolute;
+ top: 0px;
+  left: 0px;
+
 }
