--- a/task-player-navigation/style.css
+++ b/task-player-navigation/style.css
@@ -1,55 +1,62 @@
-.wrapper {
-  width: 100%;
-  height: 500px;
-  display: flex;
-  justify-content: space-between;
-  background: yellow;
+html, body {
+  height: 100%;
+  overflow: hidden; 
 }
 
-div#player {
-  width: 20px;
-  height: 20px;
-  border-radius: 25%;
-  background: red;
+.wrapper {
+  width: 100%;
+  height: 100%;
+  border: 40px solid white;
+  border-image: url(images/bg.jpg) 40 round;
+  box-sizing: border-box;
+  background-image: url(images/bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#playerArea {
+  width: 350px;
+  height: 100%;
+  border: 1px solid grey;
+  box-sizing: border-box;
+}
+
+#targetArea {
+  width: 400px;
+  height: 75%;
+  box-sizing: border-box;
+  margin-right: 35px;
+}
+
+#player {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-image: url(images/death-star.png);
+  background-size: contain;
   transition: all 0.3s ease-out 0s;
   position: absolute;
   top: 0px;
   left: 0px;
 }
 
-#playerArea {
-  width: 500px;
-  height: 500px;
-  background: grey;
-  border: 5px solid black;
-  box-sizing: border-box;
+#target {
+  width: 75px;
+  height: 50px;
+  border-radius: 50%;
+  background-image: url(images/han-solo-ship.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: absolute;
 }
 
 .bullet {
   width: 4px;
   height: 4px;
-  background: blue;
   border-radius: 50%;
+  background: red;
   position: absolute;
-  top: 0px;
-  left: 0px;
-}
-
-#targetArea {
-  width: 400px;
-  height: 500px;
-  background: grey;
-  border: 5px solid red;
-  box-sizing: border-box;
-}
-
-#target {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background: pink;
-  position: absolute;
- top: 0px;
-  left: 0px;
-
 }
